tests/fixtures/invalid/int_div_none.py
# Cannot divide Int and None
x: float = 1 / None
